add styling to Footer

--- a/shopping-cart/src/styles/styles.css
+++ b/shopping-cart/src/styles/styles.css
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+:root {
+	--grey-accent: rgb(198, 198, 198);
+	--grey-light: rgb(232, 232, 232);
+}
+
 body {
 	font-family: "Rubik", sans-serif;
 }
@@ -22,6 +27,12 @@ a:visited {
 	color: black;
 }
 
+ul,
+li {
+	text-decoration: none;
+	list-style: none;
+}
+
 /* --- SHARED CLASSES --- */
 
 .fl-row-cont {
@@ -41,7 +52,7 @@ a:visited {
 /* --- INDIVIDUAL --- */
 
 #banner {
-	background-color: rgb(198, 198, 198);
+	background-color: var(--grey-accent);
 	padding: 7px;
 }
 
@@ -91,4 +102,24 @@ a:visited {
 
 .navbar__cart-qty {
 	text-decoration: underline;
+}
+
+.footer {
+	padding: 2vw 5vw;
+	justify-content: space-evenly;
+	gap: 2vw;
+
+	background-color: var(--grey-light);
+}
+
+.footer__section {
+	gap: 20px;
+}
+
+.footer__links {
+	gap: 10px;
+}
+
+.footer__links > li {
+	cursor: pointer;
 }
