--- a/shopping-cart/src/styles/styles.css
+++ b/shopping-cart/src/styles/styles.css
@@ -123,3 +123,44 @@ li {
 .footer__links > li {
 	cursor: pointer;
 }
+
+.promo {
+	height: 500px;
+
+	background-image: url(../assets/promo1.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: 0% 50%;
+}
+
+.promo__padding {
+	padding: 20px;
+}
+
+.promo__browseBtn {
+	border: 0;
+	cursor: pointer;
+	padding: 20px 40px;
+	background-color: black;
+	border-radius: 5px;
+	color: white;
+	font-size: 1.5rem;
+	text-transform: uppercase;
+	font-weight: 600;
+}
+
+.promo1__heading {
+	font-size: 3rem;
+}
+
+.promo1__heading h1 {
+	font-weight: 900;
+	letter-spacing: 3px;
+	color: rgb(0, 0, 0);
+	text-shadow: 0px 0px 6px rgb(83, 164, 61);
+}
+
+.promo1__subtext {
+	margin: 0 10px 10px;
+	gap: 5px;
+}
