--- a/shopping-cart/src/styles/styles.css
+++ b/shopping-cart/src/styles/styles.css
@@ -116,6 +116,21 @@ li {
 	gap: 20px;
 }
 
+.footer__input {
+	padding: 3px;
+}
+
+.footer__btn {
+	background-color: black;
+	font-weight: 700;
+	color: white;
+	border: 0;
+	min-height: 20px;
+	padding: 5px;
+
+	text-transform: capitalize;
+}
+
 .footer__links {
 	gap: 10px;
 }
@@ -124,7 +139,7 @@ li {
 	cursor: pointer;
 }
 
-.promo {
+.promo1 {
 	height: 500px;
 
 	background-image: url(../assets/promo1.jpg);
@@ -163,4 +178,39 @@ li {
 .promo1__subtext {
 	margin: 0 10px 10px;
 	gap: 5px;
+}
+
+.promo2 {
+	height: 500px;
+	color: #ffffff;
+	background: #f7c1c1;
+	gap: 10px;
+}
+
+.promo2__heading {
+	font-size: 3rem;
+	text-shadow: 4px 3px 0px #7a7a7a;
+}
+
+.promo2__subheading {
+	width: 100%;
+	height: 50px;
+	background-color: black;
+	color: white;
+}
+
+.promo2__subtext {
+	text-shadow: 2px 2px 0px #7a7a7a;
+}
+
+.promo2__browseBtn {
+	border: 0;
+	cursor: pointer;
+	padding: 20px 40px;
+	background-color: white;
+	border-radius: 5px;
+	color: black;
+	font-size: 1.5rem;
+	text-transform: uppercase;
+	font-weight: 600;
 }
