--- a/shopping-cart/src/styles/styles.css
+++ b/shopping-cart/src/styles/styles.css
@@ -280,6 +280,14 @@ li {
 	box-shadow: 0px 5px 7px 0px rgba(0, 0, 0, 0.07);
 
 	border-radius: 7px;
+
+	transition: all 200ms ease-in-out;
+}
+
+.productCards__card:hover {
+	transform: translateY(-5px);
+	-webkit-box-shadow: 0px 5px 7px 0px rgba(0, 0, 0, 0.13);
+	box-shadow: 0px 5px 7px 1px rgba(0, 0, 0, 0.13);
 }
 
 .productCards__photo {
