create and add styling to Cart components

--- a/shopping-cart/src/styles/styles.css
+++ b/shopping-cart/src/styles/styles.css
@@ -73,8 +73,17 @@ button {
 	align-items: center;
 }
 
+.fl-align-end {
+	align-self: flex-end;
+}
+
 .fl-align-start {
 	align-self: flex-start;
+}
+
+.btn-transparent {
+	background: transparent;
+	border: 0;
 }
 
 /* --- INDIVIDUAL --- */
@@ -381,4 +390,75 @@ button {
 #productInfo__submitBtn:hover {
 	background-color: black;
 	color: white;
+}
+
+#qtySelectBar {
+	width: 50px;
+}
+
+#cart__empty {
+	gap: 10px;
+}
+
+.cart__img-small {
+	aspect-ratio: 1/1;
+	width: 100px;
+	border: 1px solid red;
+}
+
+.cart__productView {
+	padding-top: 30px;
+	padding-bottom: 30px;
+	padding-left: 2vw;
+	padding-right: 0;
+	justify-content: space-between;
+
+	border-bottom: 2px solid #e2e2e2;
+
+	gap: 15px;
+}
+
+.cart__productView:last-child {
+	border-bottom: 0;
+}
+
+#cart_productView-left {
+	gap: 20px;
+}
+
+#cart_productView-right {
+	justify-content: space-between;
+}
+
+.cart__filledCart {
+	padding-left: 10vw;
+	padding-right: 10vw;
+	gap: 20px;
+}
+
+#checkout-btn {
+	width: fit-content;
+	margin: 30px 0;
+}
+
+#cart__details {
+	gap: 10px;
+}
+
+.cart__bottom {
+}
+
+#cart__orderTotal {
+	justify-content: space-between;
+	padding: 17px 0;
+	border-top: 2px solid #e2e2e2;
+	border-bottom: 2px solid #e2e2e2;
+}
+
+#cart__deleteBtn {
+	transition: all 200ms ease-in-out;
+}
+
+#cart__deleteBtn:hover {
+	color: red;
 }
